build($lerna): add publish commit message config

--- a/lerna.json
+++ b/lerna.json
@@ -10,7 +10,8 @@
       "registry": "http://registry.npmjs.org",
       "ignoreChanges": [
         "*.log"
-      ]
+      ],
+      "message":"build($npm): publish"
     },
     "bootstrap": {
       "npmClient": "yarn",
