fix($prompt): prompt.js file not found in tpl-vue2-js

--- a/packages/tpl-vue2-js/package.json
+++ b/packages/tpl-vue2-js/package.json
@@ -13,7 +13,8 @@
     "test": "__tests__"
   },
   "files": [
-    "template"
+    "template",
+    "prompt.js"
   ],
   "publishConfig": {
     "registry": "http://registry.npmjs.org/",
