--- a/packages/cli-utils/package.json
+++ b/packages/cli-utils/package.json
@@ -32,8 +32,12 @@
   "homepage": "https://github.com/fe6/cli#readme",
   "dependencies": {
     "@hapi/joi": "^17.1.1",
+    "async": "^3.2.0",
     "chalk": "^4.1.0",
     "execa": "^4.0.3",
+    "handlebars": "^4.7.6",
+    "inquirer": "^7.3.3",
+    "metalsmith": "^2.3.0",
     "ora": "^4.0.5",
     "read-pkg": "^5.2.0",
     "readline": "^1.3.0",
