--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -33,6 +33,7 @@
   "homepage": "https://github.com/fe6/cli#readme",
   "dependencies": {
     "@fe6/cli-utils": "^0.1.1",
+    "@fe6/tpl-ali-mini": "^0.1.3",
     "@fe6/tpl-vue2-js": "^0.1.3",
     "boxen": "^4.2.0",
     "commander": "^6.0.0",
