--- a/packages/tpl-ali-mini/package.json
+++ b/packages/tpl-ali-mini/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@fe6/tpl-vue2-js",
+  "name": "@fe6/tpl-ali-mini",
   "version": "0.1.3",
-  "description": "version project of vue2",
+  "description": "ali mini program",
   "keywords": [
     "fe6"
   ],
@@ -23,7 +23,7 @@
   "repository": {
     "type": "git",
     "url": "git+https://github.com/fe6/cli.git",
-    "directory": "packages/@fe6/tpl-vue2-js"
+    "directory": "packages/@fe6/tpl-ali-mini"
   },
   "bugs": {
     "url": "https://github.com/fe6/cli/issues"
