--- a/.gitignore
+++ b/.gitignore
@@ -3,10 +3,7 @@ node_modules
 package-lock.json
 
 # Log files
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-lerna-debug.log*
+*.log*
 
 # Editor directories and files
 .idea
