--- a/packages/tpl-ali-mini/template/.gitignore
+++ b/packages/tpl-ali-mini/template/.gitignore
@@ -3,9 +3,7 @@ node_modules
 package-lock.json
 
 # Log files
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+*.log*
 
 # Editor directories and files
 .idea
