--- a/packages/tpl-vue2-js/template/.gitignore
+++ b/packages/tpl-vue2-js/template/.gitignore
@@ -9,9 +9,7 @@ package-lock.json
 .env.*.local
 
 # Log files
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+*.log*
 
 # Editor directories and files
 .idea
