fix($vue): modify tpl-vue2-js template

--- a/packages/tpl-vue2-js/template/package.json
+++ b/packages/tpl-vue2-js/template/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@fe6/norm": "^1.0.5",
     "core-js": "^2.6.5",
+    "lodash": "^4.17.20",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1"
